Implementazione persistenza sessioni e completamento calendario